[package]
name = "rust-udpack"
version = "0.1.0"
edition = "2021"
authors = ["huoyijie <yijie.huo@foxmail.com>"]
repository = "https://github.com/huoyijie/rust-udpack"
license-file = "LICENSE"
keywords = ["udp", "udpack", "transport", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
bytes = "1.1.0"
rand = "0.8"
sonyflake = "0.1"
